@@ -4,6 +4,8 @@
 
 - Additional parameters in Oracle subagent for redo logs and ASM monitoring
 - NXSL: variable $errormsg iholding error description set in catch block
+- Default interface expected state can be configured
+- Fixed issues: #988
 
 
 *
